# ai_den

./: LICENSE  README.md  pyproject.toml
llama-cpp-grammars/: json-object.gbnf  json.gbnf
notebooks/: NER_ENGLISH_ATIS.ipynb  NER_ENGLISH_MOVIE_COMPLEX.ipynb  NER_ENGLISH_MOVIE_SIMPLE.ipynb  NER_ENGLISH_MUSIC.ipynb  NER_ENGLISH_RESTAURANT.ipynb  NER_ENGLISH_WNUT_2020.ipynb  SEMEVAL_2016_TASK_2.ipynb  dolphin-2.7-mixtral.ipynb
src/ai_den/llama_cpp/: __init__.py  data_type.py  json_schema.py  model.py  tokenizer.py
src/ai_den/llama_cpp/grammars/: json-array.gbnf
src/ai_den/utils/: dataclasses.py  datasets.py  json_schema.py  paths.py
