[project]
name = "ai_den"
version = "0.1.0"
dependencies = [
    "accelerate",
    "dacite",
    "datasets",
    "docstring_parser",
    "ftfy",
    "huggingface_hub",
    "jinja2",
    "jsonref",
    "jupyter",
    "natsort",
    "openai",
    "pdf2image",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentencepiece",
    "tiktoken",
    "tokenizers",
    "torch",
    "transformers",
]
